# TgToFileSystem

./: .gitignore  README.md  TgFileSystemClient.py  TgFileSystemClientManager.py  TgToFileSystem.service  UserManager.py  apiutils.py  config.toml.example  configParse.py  logging_config.yaml  pyproject.toml  requirements.txt  run.sh  start.py  test.py
backend/: MediaCacheManager.py  TgFileSystemClient.py  TgFileSystemClientManager.py  UserManager.py  __init__.py  api.py  api_implement.py  apiutils.py  templates.py
backend/script/: __init__.py  check_fts.py  migrate_msg_js.py  storage_stats.py
frontend/: home.py  link_convert.py  login.py  remote_api.py  search.py  utils.py
frontend/static/: 404.webm
